--- a/index.html
+++ b/index.html
@@ -102,9 +102,21 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-white" id="habout">About</h2>
         <div class="row mt-5" id="row2">
-            <div class="col-lg-4 ms-auto">
-                <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
-            </div>
+          <div class="col-lg-4 ms-auto">
+            <p class="lead font-weight-bold">
+              Freelancer is a free bootstrap theme created by Start Bootstrap.
+              The download includes the complete source files including HTML,
+              CSS, and JavaScript as well as optional SASS stylesheets for easy
+              customization.
+            </p>
+          </div>
+          <div class="col-lg-4 me-auto">
+            <p class="lead font-weight-bold">
+              You can create your own custom avatar for the masthead, change the
+              icon in the dividers, and add your email address to the contact
+              form to make it fully functional!
+            </p>
+          </div>
         </div>
       </div>
     </section>
